<resources>
    <string name="app_name">Vietnam Endless beauty</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="bookmark">Bookmark</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="e_g_ha_noi_viet_nam">E.g: Ha Noi, Viet Nam</string>
    <string name="place_to_visit">Place to visit: </string>
    <string name="hot_trend">Ranking</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First name…</string>
    <string name="last_name">Last name…</string>
    <string name="password">Password…</string>
    <string name="update">Update</string>
    <string name="welcome_back">Welcome back</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login_login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="welcome_to_onboard">Welcome to Onboard!</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_confirm_password">Enter confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="feedback">Feedback</string>
    <string name="enter_your_first_name">Enter your name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="need_to_fill">Need to fill in all information</string>
    <string name="confirm_password">Confirm the password is incorrect</string>
    <string name="account_error">Email or password is incorrect</string>
    <string name="update_success">Update Success</string>
    <string name="update_failed">Update Failed</string>
    <string name="description_hanoi">Vietnam is capital city is Hanoi. It is well-known for its many wonderful locations, cuisine, and the Hanoi people. Being born and raised in Hanoi makes me incredibly proud. A million people travel to Hanoi annually. Uncle Ho is Mausoleum, Hoa Lo Prison, Long Bien Bridge, One Pillar Pagoda, and many other places are popular tourist destinations in Hanoi. Each location has a special historical significance that is sacred. In regards to traffic, during the day, roads are congested with traffic, particularly during rush hours.</string>
    <string name="description_thaibinh">Thai Binh is a place with historical-cultural works and folklore activities, some of which have been listed by the government as Le Qui Don is worship hall, Ho Chi Minh is memento - house… but the most famous is Keo temple. Keo temple, also known as Than Quang temple, is a typical architectural work of Vietnam. A province has produced nearly 82 traditional festivals, 16 Vietnamese popular operas, and games such as cheo, roi nuoc, bat dat, and act.</string>
    <string name="description_haiphong">A significant Vietnamese seaport is located in Hai Phong, a sizable city. Hai Phong is close to the provinces of Quang Ninh to the north, Hai Duong to the west, and Thai Binh to the south. Inter-tropical monsoons have an impact on Hai Phong is weather because of its proximity to the East Sea. The annual mean temperature ranges from 23 to 24 °C. </string>
    <string name="description_quangninh">Quang Ninh is a land steeped in rich and ancient cultural traditions. The Ha long culture, which is considered a significant milestone in the evolution of Vietnamese culture, originated in this area. Like other provinces, the people of Quang Ninh have a diverse and vibrant culture. Buddhism has a long history in this region, with evidence of its practice dating back to before King Tran Thai Tong (1225–1258) came to Yen Tu Mountain to practice. Prior to his arrival, many religious figures had already been practicing in the area.</string>
    <string name="description_nghean">Nghe An Province benefits from its advantageous geographical location, with national highways, railways, the Cua Lo International Port, and Vinh Airport all within its borders. It is the starting point of both the Heritage route in the central part and the legendary Ho Chi Minh Trail, as well as the tourist route following the east-west corridor connecting Vinh - Laos - Thailand through Highway No. 8.</string>
    <string name="description_hochiminh">Saigon is a very populated city that seems to never sleep. The lifestyle here is constantly filled with interesting and novel things because this is a gathering place for many people from various cultural backgrounds across the nation. It is a tasteful blending of contemporary and traditional elements. Many small alleys with historically significant values can be found right behind taller buildings or in the middle of the city. People here put in a lot of work, but they also have a wonderful time.</string>
    <string name="description_quangbinh">I come from Dong Hoi, a small city in Quang Binh. My hometown is famous for many splendid caves such as Thien Duong, Phong Nha, Son Doong … Besides, there are also many beautiful beaches where you can enjoy many outdoor activities such as swimming, sunbathing. However, because of the sea pollution, many people like to swim in Moc stream. The weather here is not always pleasant. It usually rains heavily in autumn and is too hot in summer. However, you can go to my province during all seasons except autumn to avoid floods. The local people are friendly and helpful. In recent years, local tourism has developed to improve people isilives. I am very proud of my hometown and I hope you will have a trip to Quang Binh.</string>
    <string name="description_binhphuoc">Binh Phuoc is a province in the Southeast region, with 11 districts and towns. My hometown Binh Phuoc city is home to many beautiful historical scenes, such as: My Son Sanctuary, Dong Xoai Victory Monument, … And it has many attractive tourist attractions, such as: Ba Den Mountain, Garden Bu Gia Map Country, Ba Ra Mountain – Mo Waterfall, Bu Dang Rubber Forest. The weather here is very hot, there are 2 seasons: rainy season and dry season. Binh Phuoc is famous for cashew trees and rubber trees. The people here are very kind and gentle. And the food here is very good. This is a perfect place to visit and rest after tiring working hours. On weekends, if you have many times, you should come to this place to relax after a tiring time.</string>
    <string name="details">Details</string>
    <string name="description_yentu">Yen Tu historical site is associated with the name of King Tran Nhan Tong, who led the army and people of the Tran dynasty to twice defeat the Yuan and Mongol armies, then renounced the throne, went to Yen Tu to practice, and founded the Zen sect. Truc Lam is rich in Vietnamese colors. Geographically, Yen Tu is a low mountain range, belonging to the Dong Trieu bow system, a geological region formed in the Quaternary period. The complex terrain and geology have created magnificent landscapes and traditional architecture blending into the majestic nature. Among them, it is impossible not to mention Yen Tu Pagoda. Located on the top of a mountain 1068m above sea level, the mountain top is always covered with clouds, adding a charming natural landscape, diverse and rich in flora and fauna. Surrounding the Yen Tu pagoda complex are famous relics and landscapes such as the West Yen Tu nature reserve, the Tran Dynasty historical site… To reach the top of Yen Tu, we must start with the stream Giai Oan and Giai Oan Pagoda. The Buddha Emperor himself gave the name Giai Oan to help save the maids who followed the king and committed suicide by jumping into the stream when the king did not allow them to serve them. Giai Oan Pagoda is famous for its sacredness, its back leans against a cliff, its face faces a gurgling stream day and night. Hoa Yen Pagoda is considered the main temple of the Yen Tu pagoda system. The pagoda resides halfway up the mountain, its position is very sturdy, and the scenery here is extremely beautiful. The pilgrimage road to Yen Tu peak has thousands of stone steps and rows of green trees on both sides of the road, with a huge canopy covering the road for everyone to travel. Nowadays, if we don not want to walk, we can take the cable car. The modern cable car system includes two stages, from the foot of the mountain to Hoa Yen Pagoda and from Hoa Yen Pagoda to Dong Pagoda.</string>
    <string name="description_halong">Ha Long Bay is a small bay on the west coast of the Gulf of Tonkin in the Northeast sea area of Vietnam, including the island waters of Ha Long city, Cam Pha town and part of Van Don island district. Ha Long Bay borders Cat Ba Island with a 120 km long coastline and nearly 2,000 large and small islands. About half of these islands have been named, the rest are largely wild, little explored and unnamed. There are two types of islands in Ha Long: limestone islands and schist islands, concentrated in two main regions: the southeast region of Bai Tu Long Bay and the southwest region of Ha Long Bay. Through the process of geological weathering here, nature has created a unique Ha Long in the world. The densely concentrated area of rocky islands with spectacular scenery and many famous beautiful caves is the central area of Ha Long Bay Natural Heritage, including Ha Long Bay and part of Bai Tu Long Bay.</string>
    <string name="description_baotang_quangninh">Quang Ninh Museum is a unique architectural and artistic work. Just looking from the outside makes visitors admire it. The museum is appearance is extremely attractive with black glass covering all sides. This is like a giant mirror reflecting the majestic image of Ha Long sea and sky. Besides, the museum is designed with a unique square structure with the main color black, which is also an image that makes many visitors think of black pearls - a precious product in Ha Long. Actually, the architecture of Quang Ninh museum is a delicate harmony between simple and modern, traditional but very new. In addition, the font appearing on the front along with the strangely designed zigzag staircase system has turned this Quang Ninh tourist destination into the most checked-in holy place in the mining land.</string>
    <string name="this_application_is_written_by_tong_thien_quan_2023">2024 Tour application contains materials sourced from Google, including images and information. All such materials are  not used for monetary purposes</string>
</resources>