<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/welcome_to_onboard"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtFirstNameRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_background_name_profile"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/enter_your_first_name"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtLastNameRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_background_name_profile"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/enter_your_last_name"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_background_name_profile"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/enter_your_email"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_background_name_profile"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtConfirmPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_background_name_profile"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/enter_confirm_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/custom_background_login_login"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sign_in"
            android:textColor="#50C2C9"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>