<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation_login" />

    <EditText
        android:id="@+id/edtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_background_name_profile"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/enter_your_email"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_background_name_profile"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/custom_background_login_login"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:text="@string/login_login"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sign_up"
            android:textColor="#50C2C9"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>