<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="24dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewImageProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="75dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imvAvatarProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_background_splash" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvNameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="Full name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewImageProfile" />

    <TextView
        android:id="@+id/tvDefaultOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/edit_profile"
        android:textColor="#7f949f"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameProfile" />

    <TextView
        android:id="@+id/tvEmailProfile"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_background_email_profile"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="manchesterunited@gmail.com"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvDefaultOne" />

    <EditText
        android:id="@+id/edtFirstNameProfile"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_background_name_profile"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/first_name"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailProfile" />

    <EditText
        android:id="@+id/edtLastNameProfile"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_background_name_profile"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/last_name"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edtFirstNameProfile" />

    <EditText
        android:id="@+id/edtPasswordProfile"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_background_name_profile"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edtLastNameProfile" />

    <TextView
        android:id="@+id/tvUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_background_update_profile"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tvLogoutProfile" />

    <TextView
        android:id="@+id/tvLogoutProfile"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_background_logout_profile"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>