<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <LinearLayout
        android:id="@+id/toolbar_drawer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imvBackMenu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_back_drawer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/general"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_language_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/language"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imvLanguageChinaMenu"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_taiwan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imvLanguageEnglishMenu"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imvLanguageEnglishMenu"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_language_english_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_feedback_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/feedback"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_share_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/share"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_privacy_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/privacy_policy"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCopyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_copyright" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/this_application_is_written_by_tong_thien_quan_2023"
            android:textColor="@color/white"
            android:textSize="11sp"/>
    </LinearLayout>


</LinearLayout>